syntax = "proto3";

package api;

option go_package = "github.com/talos-systems/sidero/app/metal-controller-manager/internal/api";

service Discovery {
  rpc CreateServer(CreateServerRequest) returns (CreateServerResponse);
}

message SystemInformation {
  string uuid = 1;
  string manufacturer = 2;
  string product_name = 3;
  string version = 4;
  string serial_number = 5;
  string sku_number = 6;
  string family = 7;
}

message CPU {
  string manufacturer = 1;
  string version = 2;
}

message CreateServerRequest {
  SystemInformation system_information = 1;
  CPU cpu = 2;
}

message CreateServerResponse {}
